--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "express01",
   "version": "1.0.0",
-  "description": "",
+  "description": "Test simple routes in Express eg GET, POST use GitHub Actions to create image and push to DockerHub",
   "main": "contacts.js",
   "scripts": {
     "start": "node contacts.js",
@@ -12,11 +12,22 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cookie-session": "^1.4.0",
-    "express": "^4.17.1",
+    "epress": "^0.0.1-security",
+    "express": "^4.17.3",
+    "firebase-admin": "^10.0.2",
     "jest": "^26.4.2",
     "lowdb": "^1.0.0",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.4",
     "supertest": "^5.0.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mdmahoney93/CI-docker-hub.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/mdmahoney93/CI-docker-hub/issues"
+  },
+  "homepage": "https://github.com/mdmahoney93/CI-docker-hub#readme"
 }
